--- a/my_portfolio_mallya/package.json
+++ b/my_portfolio_mallya/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
+    "react-type-animation": "^3.1.0",
     "styled-components": "^6.0.3",
     "web-vitals": "^2.1.4"
   },
